tests/ui/typeck/function_calls/magic_not_callable.sol
//@ compile-flags: -Ztypeck

contract C {
    uint a = msg(1000); //~ ERROR: expected function, found `msg`
}
